# Tooes

./: .gitignore  .gitmodules  README.md  pyproject.toml
assets/3D/: COMPONENTSPLATE.stl  SCROLL.stl  TOOESHANDLE.stl  TOOESHOLSTER.stl
docs/: architecture.md  experiments.md  hardware.md
docs/algorithms/: motion-estimation.md  rf-localization.md
docs/operations/: pi-setup.md
firmware/: .gitignore  README.md  log_config.py  opencellid.py  requirements.txt  run.py  tower_data.py
firmware/hal/: __init__.py  _stub_rotation.py  dead_reckoning.py  factory.py  grgsm_scanner.py  mock.py  mock_cells.py  mpu6050.py  protocols.py  qmc5883l.py  replay.py  types.py
firmware/navigation/: __init__.py  config.py  geo.py  imu.py  path_logger.py  sdr.py  service.py  trace.py
firmware/old-ui-ali/: icons.py  screens.py
firmware/runtime/: __init__.py  navigation_worker.py  orchestrator.py
firmware/scripts/: install_tiles.py  orientation_cube.py  sweep_poc.py
firmware/tests/: test_hal.py  test_navigation.py  test_opencellid.py  test_ui_redraw.py
firmware/ui/: __init__.py  app.py  geo.py  icons.py  redraw.py  runtime.py  screens.py  state.py  tiles.py
scripts/: setup_pi.sh
separate_component_files/: hardcoded_PoC_display_ink.py  mpu6050_accel_logger.py  plot_mpu6050_imu_log.py  plot_mpu6050_relative_path.py  sdr_signal_meter.py
signal_processing/: __init__.py  sdr_example.py  sdr_positioning_full_spec.docx  sdr_positioning_spec.md  sdr_tuning.py  trilateration_refpos_upgrade.md
signal_processing/sdr_positioning/: __init__.py  fusion.py  kalman.py  models.py  (+2 more)
(+14 files in other folders)
