[project]
name = "hackaubg-cell-mapping"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock"]

[tool.pytest.ini_options]
testpaths = [
    "firmware/tests",
    "signal_processing/sdr_positioning/tests",
]
